--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://terite.github.io/uy2-momentgen",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
